<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A2A2A"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

</LinearLayout>

    <EditText
        android:id="@+id/login_username_edt"
        style="@style/Widget.Material3.AutoCompleteTextView.FilledBox"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="164dp"
        android:layout_marginBottom="16dp"
        android:hint="Email"
        android:textColor="#FFFFFF"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toTopOf="@+id/login_password_edt"
        app:layout_constraintStart_toStartOf="parent"></EditText>

    <EditText
        android:id="@+id/login_password_edt"
        android:layout_width="100dp"
        android:layout_height="50dp"
...
        android:textColor="#FFFFFF"
        android:textColorHint="#808080"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></EditText>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="#F1BE48"
        android:text="Log In"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
...
