<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A2A2A"
    android:orientation="vertical">

    <TextView
        android:id="@+id/networth_info_txt"
        android:layout_width="297dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:text="Please enter the value of your assets and liabilities"
        android:textColor="#F1BE48"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175"></TextView>

    <EditText
        android:id="@+id/asset_edt_txt"
        android:layout_width="297dp"
        android:layout_height="70dp"
        android:hint="Assets"
        android:textColor="#FFFFFF"
        android:textColorHint="#808080"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"></EditText>

    <TextView
        android:id="@+id/example_asset_txt"
        android:layout_width="297dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:text="E.g: Real estate, vehicles, businesses, stocks, etc."
        android:textColor="#F1BE48"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464"></TextView>

    <EditText
        android:id="@+id/liabilities_edt_txt"
        android:layout_width="297dp"
        android:layout_height="70dp"
        android:hint="Liabilities"
        android:textColor="#FFFFFF"
        android:textColorHint="#808080"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58"></EditText>

    <TextView
        android:id="@+id/example_liability_txt"
        android:layout_width="297dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:text="E.g: Loans, mortgages, accrued, expenses, etc."
        android:textColor="#F1BE48"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671"></TextView>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#C8102E"
        android:text="Next"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>